# HalyavaBooks

./: README.md  dependencies.ps1  pyproject.toml
presentation/: presentation.md
